--- a/MobLinkDemo/MobLinkDemo.entitlements
+++ b/MobLinkDemo/MobLinkDemo.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:74de.ulml.mob.com</string>
+		<string>applinks:70r9.ulml.mob.com</string>
 	</array>
 </dict>
 </plist>
