--- a/MobLinkDemo/Info.plist
+++ b/MobLinkDemo/Info.plist
@@ -35,7 +35,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>support</string>
+				<string>mlink</string>
 			</array>
 		</dict>
 	</array>
